<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"


    >

    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/user"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="24dp"
android:layout_marginStart="10dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"

            android:contentDescription="@string/header_image"
            android:src="@drawable/user"
            />
    </androidx.cardview.widget.CardView>

    <TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="5dp"
android:layout_marginStart="24dp"
android:layout_marginEnd="24dp"
    android:text="@string/ibrahim_shehab"
android:textAppearance="?attr/textAppearanceHeadline6"
  />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="24dp"
android:layout_marginStart="24dp"
android:layout_marginEnd="24dp"
    android:text="@string/ibrahim_shehab_eldin"
android:textAppearance="?attr/textAppearanceBody2"
android:textColor="@color/material_on_surface_emphasis_medium"
 />

    </LinearLayout>